# HMM

./: .gitignore  CMakeLists.txt  README.md  ULM.dgml  main.cpp
include/: HMM.h  Tester.h  Vector.h
model/: HMM.cpp  HMM.h
src/: HMM.cpp  Tester.cpp  Vector.cpp
